# gala-layoutpw-plugin

./: README.md  meson.build
data/: gala.layout-per-window.gschema.xml
debian/: changelog  control  copyright
src/: Main.vala
vapi/: Clutter-6.metadata  libmutter-5.vapi  libmutter.vapi  mutter-clutter.deps  mutter-clutter.vapi  mutter-cogl-6.vapi  mutter-cogl-pango-6.vapi
